One more fix about display modal window on Iphone SE/6/7/8

--- a/desktop.css
+++ b/desktop.css
@@ -66,6 +66,10 @@
         height: 500px;
     }
 
+    .modal-window {
+        height: 100%;
+    }
+
     .ok-modal svg {
         width: 96px;
         height: 48px;
